--- a/style.css
+++ b/style.css
@@ -51,10 +51,22 @@ input {
     outline: none;
     border-radius: 8px;
     text-transform: uppercase;
-    font-weight: 800;
-    letter-spacing: 4px;
+    font-weight: 600;
+    letter-spacing: 3px;
     color: #2b134b;
     background-color: #00ff88;
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+
+@media(max-width: 720px) {
+    form {
+        width: 70%;
+    }
+
+    input {
+        height: 40px;
+    }
+
+
 }
